--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,10 @@
-# FROM ubuntu:latest
+#FROM ubuntu:latest
 FROM python:3.8.1
-COPY ./*.py /exp/
+COPY ./api/app.py /exp/
+COPY ./svm_Gamma=0.01_C=0.5.joblib /exp/
 COPY ./requirements.txt /exp/requirements.txt
-RUN pip3 install --no-cache-dir -r /exp/requirements.txt
+RUN pip3 install -r /exp/requirements.txt
 WORKDIR /exp
-CMD ["python3", "./plot_graphs.py"]
+ENV FLASK_APP=app
+CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
+EXPOSE 5000
